compiler/tests/fixtures/valid/action_with_effects.viv
// Action with effects using compound assignment operators

action insult:
    roles:
        @bully:
            as: initiator
        @victim:
            as: recipient
    effects:
        @victim.mood -= #CHANGE_MEDIUM
        @bully.mood += #NUDGE
