compiler/tests/fixtures/invalid/semantics/assignment_recasts_role.viv
// Invalid: assignment recasts role

action bad-recast:
    roles:
        @actor:
            as: initiator
        @target:
            as: recipient
    effects:
        @target = @actor
